@@ -1,5 +1,13 @@
 2006-03-08  Danilo Šegan  <danilo@gnome.org>
 
+	* releases.py:
+	* teams.py: 
+	* templates/team.tmpl: 
+
+	Display all languages for a team.
+
+2006-03-08  Danilo Šegan  <danilo@gnome.org>
+
 	* templates/team.tmpl: Added.
 	* teams.py: Support single team display.
 	(TranslationTeams.__init__): Add description field.
